@@ -13,6 +13,9 @@ public class FineService {
     private final Path filePath;
     private final Map<String, Integer> balances = new HashMap<>();
 
+    // -----------------------------
+    //      Constructors
+    // -----------------------------
     public FineService() {
         this(resolveDefault("fines.txt"));
     }
@@ -26,54 +29,45 @@ public class FineService {
         load();
     }
 
-    // -------------------------------------------------
-    //                  GET BALANCE
-    // -------------------------------------------------
-
+    // -----------------------------
+    //      GET BALANCE
+    // -----------------------------
     public int getBalance(String username) {
         if (username == null) return 0;
         return balances.getOrDefault(username, 0);
     }
 
-    // -------------------------------------------------
-    //                   ADD FINE
-    // -------------------------------------------------
-
+    // -----------------------------
+    //       ADD FINE
+    // -----------------------------
     public void addFine(String username, int amount) {
         if (username == null || amount <= 0) return;
-        int newBalance = getBalance(username) + amount;
-        balances.put(username, newBalance);
+        balances.put(username, getBalance(username) + amount);
         save();
     }
 
-    // -------------------------------------------------
-    //                  PAY FINE
-    // -------------------------------------------------
-
+    // -----------------------------
+    //       PAY FINE
+    // -----------------------------
     public int payFine(String username, int amount) {
         if (username == null || amount <= 0) return getBalance(username);
 
-        int current = getBalance(username);
-        int updated = Math.max(0, current - amount);
-
+        int updated = Math.max(0, getBalance(username) - amount);
         balances.put(username, updated);
         save();
-
         return updated;
     }
 
-    // -------------------------------------------------
-    //                GET ALL BALANCES
-    // -------------------------------------------------
-
+    // -----------------------------
+    //       GET ALL BALANCES
+    // -----------------------------
     public Map<String, Integer> getAllBalances() {
-        return new HashMap<>(balances);
+        return new HashMap<>(balances); // نسخة لمنع تعديل الخارجي
     }
 
-    // -------------------------------------------------
-    //             STORE BALANCE ON LOGIN
-    // -------------------------------------------------
-
+    // -----------------------------
+    //      STORE BALANCE (LOGIN)
+    // -----------------------------
     public void storeBalanceOnLogin(String username) {
         if (username == null) return;
 
@@ -84,18 +78,35 @@ public class FineService {
         }
     }
 
-    // -------------------------------------------------
-    //                      SAVE
-    // -------------------------------------------------
 
-    public void saveBalances() {
-        save();
+    // -----------------------------
+    //      SAVE TO FILE
+    // -----------------------------
+    void save() {
+        try {
+            if (filePath.getParent() != null)
+                Files.createDirectories(filePath.getParent());
+
+            try (BufferedWriter writer = Files.newBufferedWriter(
+                    filePath,
+                    StandardCharsets.UTF_8,
+                    StandardOpenOption.TRUNCATE_EXISTING,
+                    StandardOpenOption.CREATE)) {
+
+                for (var entry : balances.entrySet()) {
+                    writer.write(entry.getKey() + "," + entry.getValue());
+                    writer.newLine();
+                }
+            }
+
+        } catch (IOException e) {
+            throw new RuntimeException("Error saving fines", e);
+        }
     }
 
-    // -------------------------------------------------
-    //                LOAD FROM FILE
-    // -------------------------------------------------
-
+    // -----------------------------
+    //      LOAD FROM FILE
+    // -----------------------------
     private void load() {
         balances.clear();
 
@@ -106,53 +117,35 @@ public class FineService {
             if (!Files.exists(filePath))
                 Files.createFile(filePath);
 
-        } catch (IOException e) {
-            throw new RuntimeException("Error ensuring fines file exists", e);
-        }
-
-        try (BufferedReader reader = Files.newBufferedReader(filePath)) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                if (line.trim().isEmpty()) continue;
-
-                String[] parts = line.split(",");
-                if (parts.length >= 2) {
-                    String username = parts[0];
-                    int balance = Integer.parseInt(parts[1]);
-                    balances.put(username, balance);
+            try (BufferedReader reader = Files.newBufferedReader(filePath)) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    if (line.isBlank()) continue;
+                    String[] parts = line.split(",");
+                    if (parts.length >= 2) {
+                        String username = parts[0];
+                        int balance = Integer.parseInt(parts[1]);
+                        balances.put(username, balance);
+                    }
                 }
             }
+
         } catch (IOException e) {
-            throw new RuntimeException("Error reading fines file", e);
+            throw new RuntimeException("Error loading fines", e);
         }
     }
 
-    // -------------------------------------------------
-    //                 SAVE TO FILE
-    // -------------------------------------------------
-
-    private void save() {
-        try (BufferedWriter writer = Files.newBufferedWriter(
-                filePath,
-                StandardCharsets.UTF_8,
-                StandardOpenOption.TRUNCATE_EXISTING,
-                StandardOpenOption.CREATE)) {
-
-            for (var entry : balances.entrySet()) {
-                writer.write(entry.getKey() + "," + entry.getValue());
-                writer.newLine();
-            }
-
-        } catch (IOException e) {
-            throw new RuntimeException("Error saving fines", e);
-        }
+    // -----------------------------
+    //      SAVE BALANCES PUBLIC
+    // -----------------------------
+    public void saveBalances() {
+        save();
     }
 
-    // -------------------------------------------------
-    //                DEFAULT PATH
-    // -------------------------------------------------
-
-    private static String resolveDefault(String filename) {
+    // -----------------------------
+    //      DEFAULT PATH
+    // -----------------------------
+    static String resolveDefault(String filename) {
         return Path.of(System.getProperty("user.dir", ""), filename).toString();
     }
 }
